--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DUITKU_MERCHANT_CODE=
+DUITKU_API_KEY=
+DUITKU_CALLBACL_URL=https://example.com/callback/payment
+DUITKU_RETURN_URL=https://example.com/callback/return
+DUITKU_ENV=dev/production
